mission1/k8s-RKE2/board-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board-api
  namespace: board
spec:
  replicas: 2
  selector:
    matchLabels:
      app: board-api
  template:
    metadata:
      labels:
        app: board-api
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: board-api
              topologyKey: kubernetes.io/hostname
      imagePullSecrets:
        - name: regcred
      containers:
        - name: board-api
          image: minheek/missions:api-k3s
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests: {cpu: "200m", memory: "384Mi"}
            limits: {cpu: "500m", memory: "512Mi"}
          livenessProbe:
            httpGet: {path: /actuator/health/liveness, port: 8080}
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet: {path: /actuator/health/readiness, port: 8080}
            initialDelaySeconds: 20
            periodSeconds: 5
            failureThreshold: 3
