mission1/k8s-RKE2/postgres-primary-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board-postgres-primary
  namespace: board
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: board-postgres-primary
  template:
    metadata:
      labels:
        app: board-postgres-primary
    spec:
      nodeSelector:
        osc-role: worker-1
    containers:
      - name: postgres
        image: postgres:16-alpine
        args:
          - postgres
          - -c
          - wal_level=replica
          - -c
          - max_replication_slots=10
          - -c
          - hot_standby=on
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: pgdata
            mountPath: /var/lib/postgresql/data
          - name: initscript
            mountPath: /docker-entrypoint-initdb.d
        resources:
          requests: { cpu:"100m", memory: "256Mi"}
          limits: {cpu: "500m", memory: "512Mi"}
    volumes:
      - name: pgdata
        persistenceVolumeClaim:
          claimName: board-postgres-primary-pvc
      - name: initscript
        configMap:
          name: board-postgres-primary-initscript
          defaultMode: 0755
