mission1/k8s-RKE2/postgres-replica-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: board-postgres-replica
  namespace: board
spec:
  serviceName: board-postgres-replica
  replicas: 1
  selector:
    matchLabels:
      app: board-postgres-replica
  template:
    metadata:
      labels:
        app: board-postgres-replica
    spec:
      nodeSelector:
        osc-role: worker-2
      containers:
        - name: postgres
          image: postgres:16-alpine
          args:
            - postgres
            - -c
            - hot_standby=on
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
          resources:
            requests: { cpu: "100m", memory: "256Mi" }
            limits: { cpu: "500m", memory: "512Mi" }
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 1Gi
