mission1/k8s-RKE2/board-fe-service.yml
apiVersion: v1
kind: Service
metadata:
  name: board-fe
  namespace: board
spec:
  selector:
    app: board-fe
  ports:
    - port: 8081
      targetPort: 8081
