mission1/k8s-RKE2/postgres-primary-service.yml
apiVersion: v1
kind: Service
metadata:
  name: board-postgres-primary
  namespace: board
spec:
  clusterIP: None
  selector:
    app: board-postgres-primary
  ports:
    - port: 5432
      targetPort: 5432
