mission1/k8s-RKE2/postgres-replica-service.yml
apiVersion: v1
kind: Service
metadata:
  name: board-postgres-replica
  namespace: board
spec:
  clusterIP: None
  selector:
    app: board-postgres-replica
  ports:
    - port: 5432
      targetPort: 5432
