mission1/k8s-RKE2/board-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: board-ingress
  namespace: board
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - board.local
      secretName: board-tls-secret
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: board-fe
                port:
                  number: 8081
